<resources>
    <string name="app_name">My Android Nanodegree Apps</string>
    <string name="app_made_by">by Jorge Plaza</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Football Scores</string>
    <string name="library">Library</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_project">Capstone Project</string>

    <string name="app_launch_message">This button will launch my %1$s app!</string>
</resources>
